[gd_scene load_steps=15 format=3 uid="uid://bssoixynq4hax"]

[ext_resource type="Texture2D" uid="uid://2wdcrqhvpudx" path="res://assets/sprites/slime_green.png" id="1_8q55c"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_jfwd0"]
[ext_resource type="PackedScene" uid="uid://cakgfrojt6p0t" path="res://scenes/killzone.tscn" id="2_x3sn7"]
[ext_resource type="AudioStream" uid="uid://cry454ay4p5jn" path="res://assets/sounds/explosion.wav" id="4_x6qkr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5w5gc"]
atlas = ExtResource("1_8q55c")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_en2c0"]
atlas = ExtResource("1_8q55c")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y643t"]
atlas = ExtResource("1_8q55c")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jey2c"]
atlas = ExtResource("1_8q55c")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_grocc"]
atlas = ExtResource("1_8q55c")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5pxw"]
atlas = ExtResource("1_8q55c")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn0ll"]
atlas = ExtResource("1_8q55c")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_roc7k"]
atlas = ExtResource("1_8q55c")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_2b03x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w5gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en2c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y643t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jey2c")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_grocc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5pxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn0ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roc7k")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkbl7"]
size = Vector2(6, 10)

[node name="Slime" type="Node2D"]
script = ExtResource("1_jfwd0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_2b03x")
autoplay = "default"
frame_progress = 0.329399

[node name="Killzone" parent="." instance=ExtResource("2_x3sn7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_gkbl7")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 0)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)
collide_with_areas = true

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-3, -9)
collision_mask = 2

[node name="RayCastUp2" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(0, -10)
collision_mask = 2

[node name="RayCastUp3" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(3, -9)
collision_mask = 2

[node name="death" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -6)
stream = ExtResource("4_x6qkr")
bus = &"SFX"

[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
